--- a/src/Functiona/Details/details.css
+++ b/src/Functiona/Details/details.css
@@ -80,3 +80,23 @@
 .login-table tr:nth-child(even) {
     background-color: #f9f9f9;
 }
+
+.backbtn{
+    padding: .7rem;
+    width: 3rem;
+    border-radius: 5rem;
+    border: none;
+    background-color: rgb(139, 64, 64);
+    color: white; 
+
+    font-weight: 1000;
+}
+
+.backbtn:hover{
+    padding: .7rem;
+     border-radius: 5rem;
+    border: none;
+    background-color: rgb(233, 38, 38);
+   
+    font-weight: 1000;
+}
