--- a/src/Functiona/Details/details.css
+++ b/src/Functiona/Details/details.css
@@ -5,7 +5,7 @@
       padding: 20px;
     border-radius: 8px;
     width: 100%; 
-    height: 40rem;
+    height: 38.6rem;
     margin-top: 12rem;
     margin: 0 auto;
 }
@@ -13,6 +13,7 @@
 .login-h2 {
     text-align: center;
     margin-bottom: 20px;
+    margin-top: -1rem;
 }
 
 .login-flex-row {
@@ -99,4 +100,9 @@
     background-color: rgb(233, 38, 38);
    
     font-weight: 1000;
+}
+
+h1{
+    
+    margin-bottom: 4rem;
 }
