made changes in dashboard.jsx

--- a/src/Functiona/dashboard/dashboard.css
+++ b/src/Functiona/dashboard/dashboard.css
@@ -191,3 +191,9 @@ margin-top: -2rem;
    
     font-weight: 1000;
 }
+
+
+.alignfirstrowicons{
+    margin-left: 20rem;
+    margin-bottom: -2rem;
+}
