--- a/src/Functiona/dashboard/dashboard.css
+++ b/src/Functiona/dashboard/dashboard.css
@@ -2,10 +2,11 @@
 /*DASHBOARD*//*DASHBOARD*//*DASHBOARD*//*DASHBOARD*/
 /*DASHBOARD*//*DASHBOARD*//*DASHBOARD*//*DASHBOARD*/
 .dashboard-header {
-    background-color: #aaa8a8;
+    background-color: #e2dbdb;
     width: 100%;
     height:38.6rem;
     padding: 10px; 
+    color: black;
     
 }
 
@@ -19,7 +20,8 @@
     align-items: center;
     margin-left: 4rem;
 margin-top: -2rem;
-    background-color: rgb(100, 105, 104);
+    background-color: rgb(171, 185, 182);
+     
 }
 
 .navbar2 {
@@ -32,6 +34,7 @@ margin-top: -2rem;
     height: 4rem;
 
     background-color: rgb(100, 105, 104);
+     
 }
 
 .navbar-left {
@@ -57,6 +60,7 @@ margin-top: -2rem;
       align-items: center; 
     gap: 1.5rem;
     margin-top: -1rem;
+    
 }
 
 .alignbtntext{
@@ -65,6 +69,7 @@ margin-top: -2rem;
     gap: 10rem;
     margin-left: 2rem;
     margin-top: -1.5rem;
+     
 }
 
 
@@ -72,17 +77,20 @@ margin-top: -2rem;
     display: flex;
       gap: -1rem;
       margin-left: 15rem;
+       
 }
 
 .box{
     width: 25rem;
     height: 12rem;
-    background-color: rgb(136, 127, 127);
+    background-color: rgb(236, 228, 228);
     margin-top: 2rem;
     border-radius: 1rem;
     margin-left: 1rem;
 
     background-color: 'rgb(178, 178, 255)';
+    color: black;
+    border: 1px solid rgb(167, 156, 156);
  
 }
 
@@ -102,7 +110,7 @@ margin-top: -2rem;
     font-weight:500;
     font-size: 1.5rem;
     margin-left: 2rem;
-    margin-top: 1.5rem;
+    margin-top: 0.5rem;
 }
 
 .movepart1{
@@ -149,8 +157,8 @@ margin-top: -2rem;
     width: 3rem;
     border-radius: 1rem;
     border: none;
-    background-color: purple;
-    color: white;
+    background-color: rgb(87, 198, 241);
+    
 }
 
 .navbar-item1{
@@ -178,7 +186,7 @@ margin-top: -2rem;
     border-radius: 5rem;
     border: none;
     background-color: rgb(139, 64, 64);
-    color: white;  
+    
 
     font-weight: 1000;
 }
@@ -187,13 +195,13 @@ margin-top: -2rem;
     padding: .7rem;
      border-radius: 5rem;
     border: none;
-    background-color: rgb(233, 38, 38);
-   
+    background-color: rgb(233, 38, 38); 
     font-weight: 1000;
 }
 
 
 .alignfirstrowicons{
     margin-left: 20rem;
-    margin-bottom: -2rem;
+    margin-bottom: -2.2rem;
+    font-size: 2rem;
 }
