--- a/src/Functiona/dashboard/dashboard.css
+++ b/src/Functiona/dashboard/dashboard.css
@@ -75,6 +75,9 @@ margin-top: -2rem;
 
 .alignboxes2{
     display: flex;
+    text-align: center;
+    font-weight: 100;
+    font-size: 1.2rem;
       gap: -1rem;
       margin-left: 15rem;
        
